--- a/src/app/todo/todo-add/todo-add.component.html
+++ b/src/app/todo/todo-add/todo-add.component.html
@@ -1,4 +1,4 @@
 <header class="header">
     <h1>todos</h1>
-    <input class="new-todo" placeholder="What needs to be done?" autofocus>
+    <input class="new-todo" placeholder="escribe una tarea" [formControl]="txtInput" (keyup.enter)="agregarTodo()" autofocus>
 </header>
